tests/tests_p1/pass/prof/06ok.min
program
	array x[1] := 12
start
	x[0]!
end
