tests/tests_p1/fail/prof/21toomanyinit.min
program
	array vector[10] := 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0
start
	vector[0]!
end
